# ccp

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .markdownlint.jsonc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  dagger.json  go.mod  go.sum  justfile  main.go  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  tox.ini
worker/: README.md  mypy.ini  pyproject.toml  ruff.toml  tox.ini
worker/install/: README.md  worker.conf  worker.logging.json
worker/requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
worker/settings/: common.py  testmysql.py
worker/tests/: conftest.py  test_antivirus.py  test_antivirus_clamdscan.py  test_antivirus_clamscan.py  test_archivematicaCreateMETSMetadataCSV.py  test_archivematicaCreateMETSMetadataXML.py  test_archivematicaCreateMETSRights.py  test_archivematicaCreateMETSRightsDspaceMDRef.py  test_assign_file_uuids.py  test_assign_uuids_to_directories.py  test_characterize_file.py  test_check_for_access_directory.py  test_create_aip_mets.py  test_create_dataverse_mets.py  test_create_mets_v2.py  test_create_transfer_mets.py  test_database_functions.py  test_dicts.py  test_dip_generation_helper.py  test_email_fail_report.py  test_ensure_no_mutable_globals.py  test_execute_functions.py  test_extract_contents.py  test_file_operations.py  test_filename_change.py  test_gearman_encoder.py  test_has_packages.py  test_identify_file_format.py  test_job.py  test_json_conversion.py  test_load_labels_from_csv.py  test_load_premis_events_from_xml.py  test_move_or_merge.py  test_normalize.py  test_parse_dataverse.py  test_parse_external_mets.py  test_parse_mets_to_db.py  test_pid_components.py  test_policy_check.py  test_reingest_mets.py  (+8 more)
worker/tests/client/: test_job.py
worker/tests/utils/: test_appconfig.py  test_archivematica_functions.py  test_bindpid.py  test_database_functions.py  test_execute_functions.py
worker/worker/: __main__.py  version.py
worker/worker/client/: __init__.py  gearman.py  job.py  loader.py  mcp.py  metrics.py  pool.py  utils.py  worker.py
worker/worker/clientScripts/: archivematicaCreateMETSMetadataCSV.py  archivematicaCreateMETSMetadataXML.py  archivematicaCreateMETSReingest.py  archivematicaCreateMETSRights.py  archivematicaCreateMETSRightsDspaceMDRef.py  archivematicaCreateMETSTrim.py  archivematica_clamscan.py  assign_file_uuids.py  assign_uuids_to_directories.py  bag_with_empty_directories.py  bind_pid.py  bind_pids.py  change_object_names.py  change_sip_name.py  characterize_file.py  check_for_access_directory.py  check_for_service_directory.py  cmd_chmod.py  cmd_cp.py  cmd_mkdir.py  cmd_mv.py  cmd_test.py  cmd_tree.py  compress_aip.py  convert_dataverse_structure.py  copy_recursive.py  copy_submission_docs.py  copy_transfer_submission_documentation.py  copy_transfers_metadata_and_logs.py  create_event.py  create_mets_dataverse_v2.py  create_mets_v2.py  create_sip_from_transfer_objects.py  (+63 more)
(+448 files in other folders)
